fix(parser): 修复股票行情数据解析逻辑
- 重命名变量 preClose 为 prevClose 以提高代码可读性
- 修正日志方法名称从 parseByFilePath 统一为 parseLdayByFilePath
- 在数据解析中添加成交额为0的停牌情况过滤逻辑
- 使用 removeLast() 方法替换索引删除优化列表操作
- 移除调试用的临时打印语句
- 添加分隔线注释增强代码结构清晰度